# axiomworks-youtube-mcp

./: .gitignore  .gitleaks.toml  .security-blocklist.txt  API_GAPS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  UPSTREAM_CONTRIBUTIONS.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security-audit.yml  security.yml
docs/: USER_GUIDE.md
scripts/: install-hooks.sh
src/axiomworks_youtube_mcp/: __init__.py  __main__.py  cli.py  config.py  server.py
src/axiomworks_youtube_mcp/auth/: __init__.py
src/axiomworks_youtube_mcp/clients/: __init__.py  analytics.py  live.py  youtube.py  ytmusic.py
src/axiomworks_youtube_mcp/tools/: __init__.py
src/axiomworks_youtube_mcp/utils/: __init__.py  cache.py  quota.py
tests/: test_cache.py  test_config.py  test_quota.py  test_server.py
